# AI-Assurance-Framework

./: .dockerignore  .gitignore  CLA.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  RELEASING.md  aiaf-assistant.md  architecture-next.md  architecture.md  pyproject.toml  requirements.txt  security_control_catalog.md  threat_model.md
.github/workflows/: ci.yml  cla.yml
deploy/docker/: Dockerfile  docker-compose.yml
deploy/k8s/: deployment.yaml  service.yaml
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  AssistantDrawer.jsx  api.js  api.test.js  charts.jsx  index.css  ui.jsx  useResource.js
frontend/src/tabs/: Adoption.jsx  AgentAuthorization.jsx  Analyzer.jsx  ApiExplorer.jsx  Architecture.jsx  ContextProvenance.jsx  Governance.jsx  Overview.jsx  RagInventory.jsx  Registry.jsx
scripts/: run_local.sh  seed_demo_data.py
src/aiaf/: __init__.py  architecture.py  cli.py  config.py
src/aiaf/analysis/: __init__.py  adoption_velocity.py  adversarial_testing.py  adversary_simulation.py  agent_policy_profiles.py  agent_risk_v2.py  agent_topology.py  backdoor_heuristics.py  benchmark_contamination.py  bias_fairness.py  context_provenance.py  data_leakage.py  extraction_tests.py  frontier_eval.py  frontier_eval_harness.py  hallucination_risk.py  human_oversight_monitor.py  jailbreak.py  memory_integrity.py  model_risk_v2.py  permission_graph.py  poisoning_tests.py  probes.json  prompt_injection.py  rag_security.py  resource_monitor.py  risk_drift.py  sandbox_posture.py  sandbox_runtime.py  supply_chain.py  telemetry_ingest.py  tool_invocation_risk.py  training_data_assurance.py  trustworthiness.py  unknown_model_probe.py  workflow_graph.py
src/aiaf/api/: __init__.py  adoption_velocity.py  agent_security.py  agent_topology.py  agentic.py  app.py  architecture.py  assistant.py  assurance.py  context_provenance.py  dependencies.py  deployment_verify.py  egress.py  frontier_eval.py  governance.py  guardrail.py  human_oversight.py  identity.py  intake.py  interop.py  ledger.py  mcp.py  memory_integrity.py  middleware.py  models.py  monitoring.py  nhi.py  ops.py  pep_middleware.py  policy_enforcement.py  portal.py  rag.py  reporting.py  resources.py  risk.py  risk_register.py  sandbox_posture.py  skill_scanner.py  supply_chain.py  system_redteam.py  (+2 more)
src/aiaf/auth/: __init__.py  api_key.py  rbac.py
src/aiaf/core/: __init__.py  adoption_engine.py  agent_action_ledger.py  agent_runtime_engine.py  agentic_engine.py  assistant_actor.py  assistant_authorization.py  assistant_engine.py  assistant_llm.py  assistant_prompts.py  assistant_workflows.py  egress_firewall.py  evidence_engine.py  governance_engine.py  guardrail_engine.py  incident_manager.py  inference_telemetry.py  monitoring_engine.py  ops_executor.py  ops_scheduler.py  org_policy_engine.py  policy_enforcement.py  probe_engine.py  rag_taint_gate.py  redteam_engine.py  remediation_tracker.py  report_snapshot_engine.py  reporting_engine.py  risk_confidence.py  risk_engine.py  risk_register_engine.py  siem_export.py  system_redteam.py  tool_authorization.py  unknown_model_assurance.py  vulnerability_engine.py
src/aiaf/data/: __init__.py  postgres_store.py  store.py  vector_store.py
src/aiaf/mapping/: __init__.py  control_catalog.py  eu_ai_act.py  iso_42001.py  standards.py  threat_frameworks.py
src/aiaf/notifications/: __init__.py  webhook.py
src/aiaf/observability/: __init__.py  logging.py  metrics.py  tracing.py
src/aiaf/plugins/: __init__.py  base.py  loader.py
src/aiaf/registry/: __init__.py  advisories.py  advisory_feed.py  advisory_feed_v2.py  advisory_matcher_v2.py  agent_registry.py  ai_threat_intel.py  artifact_integrity_v2.py  attestation.py  attestation_v2.py  checksum.py  cyclonedx_bom.py  dependency_discovery.py  dependency_discovery_v2.py  deployment_verifier.py  evidence_origin.py  fact_reconciler.py  hf_model_card.py  identity_registry.py  lineage_graph.py  mbom.py  mbom_v2.py  mcp_scanner.py  models.py  nhi_discovery.py  nhi_registry.py  provenance_v2.py  rag_inventory.py  serialization_scanner.py  sigstore_verifier.py  (+4 more)
tests/: test_adoption_engine.py  test_adoption_engine_p2.py  test_adoption_velocity.py  test_adversarial_testing_v2.py  test_adversary_simulation.py  test_advisory_feed_v2.py  test_advisory_feed_v2_integration.py  test_advisory_feeds.py  test_advisory_matcher_v2.py  test_agent_action_ledger.py  test_agent_registry.py  test_agent_risk_v2.py  test_agent_runtime.py  test_agent_topology.py  test_agentic_assurance.py  test_ai_threat_intel.py  test_analyzer_context_integration.py  test_architecture.py  test_artifact_integrity_v2.py  test_assistant_api.py  test_assurance_reporting.py  test_attestation_v2.py  test_backdoor_heuristics.py  test_benchmark_contamination.py  test_bias_fairness.py  test_bias_fairness_integration.py  test_context_provenance.py  test_continuous_monitoring.py  test_control_catalog.py  test_cyclonedx_bom.py  test_data_leakage_v2.py  test_dependency_discovery_v2.py  test_deployment_verifier.py  test_egress_firewall.py  test_engine.py  test_evidence_origin.py  test_evidence_pack.py  test_extraction_tests.py  test_fact_reconciler.py  test_flag_coercion_integration.py  (+73 more)
(+19 files in other folders)
