[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiaf"
version = "0.2.0"
description = "AI Assurance Framework — continuous security assurance for AI systems"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = [
    "ai-security", "ai-assurance", "llm-security", "ai-governance",
    "model-registry", "ai-risk", "supply-chain", "agentic-ai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.22.0",
    "starlette>=0.27.0",
    "pydantic>=2.0.0",
    "psycopg2-binary>=2.9.6",
    "huggingface_hub>=0.16.4",
    "packaging>=23.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
    "pytest>=7.0.0",
    "httpx>=0.24.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "pytest-cov>=4.0.0",
]
pdf = ["reportlab>=4.0.0"]
tracing = ["opentelemetry-sdk>=1.20.0", "opentelemetry-exporter-otlp-proto-grpc>=1.20.0"]

[project.scripts]
aiaf = "aiaf.cli:main"

[project.urls]
Repository = "https://github.com/mbwika/AI-Assurance-Framework"
Issues = "https://github.com/mbwika/AI-Assurance-Framework/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"aiaf.web" = ["index.html", "assets/*.css", "assets/*.js"]

# ── Ruff linter ───────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",
    "B008",  # FastAPI Depends/Form/Query as default args is the intended pattern
    "B904",  # raise HTTPException inside except — chaining intentionally suppressed from HTTP clients
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "ANN", "E402", "F401", "B007", "B017"]

# ── Pytest ─────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --tb=short"

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
